--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-react-ts-eslint-prettier",
-  "homepage": "https://bycolour2.github.io/convertingInput",
+  "homepage": "https://bycolour2.github.io/convertingInput/",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -13,7 +13,7 @@
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "gh-pages": "^4.0.0",
